@@ -23,13 +23,13 @@ namespace VisibilityControl
         private static readonly string SettingsFileName = Path.Combine(ColossalFramework.IO.DataLocation.localApplicationData, "VisibilityControl.xml");
 
         /// <summary>
-        /// Gets or sets building visibility setttings for transparency LOD fixing.
+        /// Gets or sets building visibility settings for transparency LOD fixing.
         /// </summary>
         [XmlElement("BuildingTransparency")]
         public BuildingTransparencyRecord BuildingTransparency { get; set; } = new BuildingTransparencyRecord();
 
         /// <summary>
-        /// Gets or sets building visibility setttings for transparency LOD fixing.
+        /// Gets or sets building visibility settings for transparency LOD fixing.
         /// </summary>
         [XmlElement("PropTransparency")]
         public PropTransparencyRecord PropTransparency { get; set; } = new PropTransparencyRecord();
